--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.79"
 clap = { version = "4.4.18", features = ["derive"] }
 nom = "7.1.3"
+thiserror = "1.0.56"
 
 [dev-dependencies]
 test-case = "3.3.1"
