--- a/.github/workflows/cargo.yml
+++ b/.github/workflows/cargo.yml
@@ -2,7 +2,11 @@ name: Check project with cargo tooling
 
 on:
   push:
+    paths-ignore:
+      - '**/README.md'
   pull_request:
+    paths-ignore:
+      - '**/README.md'
   
 env:
   CARGO_TERM_COLOR: always
