ci: Added more directories to cache
The previous cache pattern was not capturing $CARGO_HOME dirs

--- a/.github/workflows/cargo-lint.yml
+++ b/.github/workflows/cargo-lint.yml
@@ -30,7 +30,12 @@ jobs:
 
     - uses: actions/cache@v4
       with:
-        path: target/
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
         key: cargo-lint-${{ hashFiles('Cargo.lock') }}
         restore-keys: |
           cargo-lint-${{ hashFiles('Cargo.lock') }}
