--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -31,7 +31,12 @@ jobs:
 
     - uses: actions/cache@v4
       with:
-        path: target/
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
         key: cargo-test-${{ hashFiles('Cargo.lock') }}
         restore-keys: |
           cargo-test-${{ hashFiles('Cargo.lock') }}
