--- a/.github/workflows/cargo-doc-pages.yml
+++ b/.github/workflows/cargo-doc-pages.yml
@@ -33,7 +33,12 @@ jobs:
 
       - uses: actions/cache@v4
         with:
-          path: target/
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
           key: cargo-doc-${{ hashFiles('Cargo.lock') }}
           restore-keys: |
             cargo-doc-${{ hashFiles('Cargo.lock') }}
